--- a/presentation/index.html
+++ b/presentation/index.html
@@ -151,10 +151,9 @@
         <div>
           <h2>Initial annotation attempts</h2>
           <p>
-            NER:
-            <ul>
-              <li>The named entity recognition approach (NER) to annotation involved labeling drugs as well as associated adverse side effects within Reddit posts.  Our first attempt was unsuccessful due to ambiguous annotation rules. Consequently, we transitioned to the span categorization approach to annotation, hypothesizing that our initial challenges could be attributed to the NER approach.</li>
-            </ul>
+            The named entity recognition approach (NER) to annotation involved labeling drugs as well as associated adverse side effects within Reddit posts.  Our first attempt was unsuccessful due to ambiguous annotation rules. Consequently, we transitioned to the span categorization approach to annotation, hypothesizing that our initial challenges could be attributed to the NER approach.</li>
+          </p>
+          <p>
             The span categorization (SpanCat) approach to annotation of Reddit posts involved labeling drugs, their associated adverse side effects, and ADR phrases directly connecting a drug to its undesired side effect.  For our annotations, we paired up: Aidan was paired with Jackson, while Zach was paired with Taylor.  Cohen’s kappa was computed for each pair of annotators to check to see if each pair was agreeing sufficiently well on the number of ADRs in each Reddit post.  The results were as follows:   
             <ul>
               <li>Zach and Taylor's Cohen's Kappa: <b>.46</b></li>
