--- a/presentation/index.html
+++ b/presentation/index.html
@@ -10,7 +10,7 @@
   <div class="timeline">
     <div class="timeline-navigation">
       <div class="timeline-node active" data-target="event-1">INTRODUCTION</div>
-      <div class="timeline-node" data-target="event-2">DATA ANALYSIS</div>
+      <div class="timeline-node" data-target="event-2">ANALYSIS</div>
       <div class="timeline-node" data-target="event-3">ANNOTATION</div>
       <div class="timeline-node" data-target="event-4">TESTING</div>
       <div class="timeline-node" data-target="event-5">PIPELINE</div>
